--- a/Word_cloud.html
+++ b/Word_cloud.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="utf-8" />
+<head>
+  <!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEV5G1J50T"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-EEV5G1J50T');
+		</script>
+  <meta charset="utf-8" />
 
 <title>C1M6L2_Final_Project_V3</title>
 
