--- a/Word_cloud.html
+++ b/Word_cloud.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEV5G1J50T"></script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK1QYFHS5Y"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
-			gtag('config', 'G-EEV5G1J50T');
+			gtag('config', 'G-QK1QYFHS5Y');
 		</script>
   <meta charset="utf-8" />
 
