Update Awards & Certifications.html

--- a/Awards & Certifications.html
+++ b/Awards & Certifications.html
@@ -193,7 +193,7 @@
 												<td>Introduction to SQL, Intermediate SQL</td>
 												<td>DataCamp</td>									
 												<td><i>Jul.2022</i></td>
-												<td><a href="#">View Certificate</a></td>
+												<td><a href="https://drive.google.com/file/d/1xl213ur4yRijKvJ-7XUdFyz19K12Sbnw/view?usp=sharing">View Certificate</a></td>
 											</tr>
 
 											<tr>
