--- a/Extra-Curricular Activities.html
+++ b/Extra-Curricular Activities.html
@@ -126,9 +126,11 @@
 									<div class="content" style="background-color:rgb(94, 2, 94)">
 										<div class="inner">
 											<header class="major">
-												<h3>Chess (Hobby)</h3>“Quiet people have the loudest minds.” ― Stephen Hawking
+												<h3>Chess (Hobby)</h3>
 											</header>
-											<p> "Gens una sumus" - We are one people.<br>No better way to exercise the memory, improve concentration and logical thinking,
+											<p> “Quiet people have the loudest minds.” ― Stephen Hawking<br>
+												"Gens una sumus" - We are one people.<br>
+												No better way to exercise the memory, improve concentration and logical thinking,
 												and implement creativity.
 												Most importantly, it's fun. Hate it to be checkmated! <a href="https://chess.com/play/Mahbub1807">Up for a game?</a> 
 											</p>
