--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="Academics.html">Academics</a></li>
-							<li><a href="Research & Publications.html">Research & Publications</a></li>
-							<li><a href="Projects.html">Projects</a></li>
-							<li><a href="Experiences.html">Experiences</a></li>
-							<li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
-							<li><a href="Extra-Curricular Activities.html">Extra-Curricular Activities</a></li>
-						</ul>
+						    <li><a href="Academics.html">Academics</a></li>
+						    <li><a href="Research & Publications.html">Research & Publications</a></li>
+						    <li><a href="Big Data Management.html">Big Data Management</a></li>
+						    <li><a href="Projects.html">Projects</a></li>
+						    <li><a href="Experiences.html">Experiences</a></li>
+						    <li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
+						    <li><a href="Extra-Curricular Activities.html">Extra-Curricular Activities</a></li>
+					        </ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">LET'S TAKE A TOUR</a></li>
 						</ul>
@@ -118,6 +119,16 @@
 									<header class="major">
 										<h3><a href="Research & Publications.html" class="link">Research & Publications</a></h3>
 										<p>“Research is to see what everybody else has seen, and to think what nobody else has thought.” ― Albert Szent Gyorgyi</p>
+									</header>
+								</article>
+								
+								<article>
+									<span class="image">
+										<img src="images/1570619250phph7PCc1.jpeg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="Big Data Management.html" class="link">Big Data Management</a></h3>
+										<p>“Data is the new science. Big Data holds the answers.” ― Pat Gelsinger</p>
 									</header>
 								</article>
 
