--- a/Academics.html
+++ b/Academics.html
@@ -36,12 +36,13 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="Academics.html">Academics</a></li>
-						<li><a href="Research & Publications.html">Research & Publications</a></li>
-						<li><a href="Projects.html">Projects</a></li>
-						<li><a href="Experiences.html">Experiences</a></li>
-						<li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
-						<li><a href="Extra-Curricular Activities.html">Extra-Curricular Activities</a></li>
+					     <li><a href="Academics.html">Academics</a></li>
+				             <li><a href="Research & Publications.html">Research & Publications</a></li>
+				             <li><a href="Big Data Management.html">Big Data Management</a></li>
+					     <li><a href="Projects.html">Projects</a></li>
+					     <li><a href="Experiences.html">Experiences</a></li>
+					     <li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
+					     <li><a href="Extra-Curricular Activities.html">Extra-Curricular Activities</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="#" class="button primary fit">LET'S TAKE A TOUR</a></li>
