--- a/Research & Publications.html
+++ b/Research & Publications.html
@@ -38,6 +38,7 @@
 					<ul class="links">
 						<li><a href="Academics.html">Academics</a></li>
 						<li><a href="Research & Publications.html">Research & Publications</a></li>
+						<li><a href="Big Data Management.html">Big Data Management</a></li>
 						<li><a href="Projects.html">Projects</a></li>
 						<li><a href="Experiences.html">Experiences</a></li>
 						<li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
