--- a/Academics.html
+++ b/Academics.html
@@ -112,7 +112,7 @@
 													<td>Ansys FLUENT</td>
 												</tr>
 												<tr>
-													<td>Post Processing & Data Visulization</td>
+													<td>Post Processing & Data Visualization</td>
 													<td>Tec Plot 360 , Plot Digitizer , Seaborn</td>
 												</tr>
 												<tr>
