Update Awards & Certifications.html

--- a/Awards & Certifications.html
+++ b/Awards & Certifications.html
@@ -100,7 +100,7 @@
 									<div class="content" style="background-color: rgb(20, 82, 82);">
 										<div class="inner">
 											<header class="major">
-												<h3>Titumit Hall, BUET</h3>
+												<h3>Titumir Hall, BUET</h3>
 												2022
 											</header>
 											<p>Recognition from hall for contribution</p>
