--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<img src="images/Black Modern Team Instagram Post.png" alt="" data-position="top center" />
 									</a>
 
-									    <div class="content" style="background-color:rgb(20,82,82)">
+									    <div class="content">
 											<div class="inner" >
 												<header class="major">
 													<h3>AFFILIATIONS</h3>
