Update Big Data Management.html

--- a/Big Data Management.html
+++ b/Big Data Management.html
@@ -71,7 +71,7 @@
 								<div class="box_container">									
 									<div class="box_image">
 										<a href="Mixing Efficiency Code.html" target="blank">
-											<img src="images/Big Data Analytics/1570619250phph7PCc1.jpeg">
+											<img src="images/Big Data Analytics/maxresdefault_3.jpg">
 										</a>
 									</div>
 									<div class="box_content">
@@ -85,7 +85,7 @@
 								<div class="box_container">									
 									<div class="box_image">
 										<a href="Total Pressure Recovery Code.html" target="blank">
-											<img src="images/Big Data Analytics/big-data-analytics.jpg">
+											<img src="images/Big Data Analytics/maxresdefault_3.jpg">
 										</a>
 									</div>
 									<div class="box_content">
@@ -98,12 +98,51 @@
 								<div class="box_container">									
 									<div class="box_image">
 										<a href="Mach Number Average.html" target="blank">
-											<img src="images/Big Data Analytics/pexels-photo-414860.jpeg" alt="">
+											<img src="images/Big Data Analytics/maxresdefault_3.jpg" alt="">
 										</a>
 									</div>
 									<div class="box_content">
 										<a href="Mach Number Average.html" target="blank">
 											<p>Numerical Integration Of Mass-flux Weighted Average Mach Number Of A Hypersonic Flow Using Python</p>
+										</a>
+									</div>
+							    </div>
+
+								<div class="box_container">									
+									<div class="box_image">
+										<a href="Electric Vehicle Ranking.html" target="blank">
+											<img src="images/Big Data Analytics/Tesla.jpg" alt="">
+										</a>
+									</div>
+									<div class="box_content">
+										<a href="Electric Vehicle Ranking.html" target="blank">
+											<p>Electric Vehicle Ranking | Using Open Source Data</p>
+										</a>
+									</div>
+							    </div>
+
+								<div class="box_container">									
+									<div class="box_image">
+										<a href="https://app.datacamp.com/workspace/w/267597d9-1f33-4152-85ea-9803c203477f" target="blank">
+											<img src="images/Big Data Analytics/Netflix.PNG" alt="">
+										</a>
+									</div>
+									<div class="box_content">
+										<a href="https://app.datacamp.com/workspace/w/267597d9-1f33-4152-85ea-9803c203477f" target="blank">
+											<p>Investigating Netflix Movies and Guest Stars in The Office | DataCamp</p>
+										</a>
+									</div>
+							    </div>
+
+								<div class="box_container">									
+									<div class="box_image">
+										<a href="https://app.datacamp.com/workspace/w/5b770b9e-3415-44c5-8d44-a827da7e8237" target="blank">
+											<img src="images/Big Data Analytics/GoogleAdsKeywords.png" alt="">
+										</a>
+									</div>
+									<div class="box_content">
+										<a href="https://app.datacamp.com/workspace/w/5b770b9e-3415-44c5-8d44-a827da7e8237" target="blank">
+											<p>Generating Keywords for Google Ads | DataCamp</p>
 										</a>
 									</div>
 							    </div>
