--- a/Projects.html
+++ b/Projects.html
@@ -6,14 +6,6 @@
 -->
 <html>
 	<head>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK1QYFHS5Y"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'G-QK1QYFHS5Y');
-		</script>
 		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -38,16 +30,17 @@
 				<ul class="links">
 					<li><a href="Academics.html">Academics</a></li>
 					<li><a href="Research & Publications.html">Research & Publications</a></li>
-					<li><a href="Big Data Management.html">Big Data Management</a></li>
 					<li><a href="Projects.html">Projects</a></li>
 					<li><a href="Experiences.html">Experiences</a></li>
 					<li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
 					<li><a href="Extra-Curricular Activities.html">Extra-Curricular Activities</a></li>
+					<li><a href="Travelling.html">Travelling</a></li>
 				</ul>
 				<ul class="actions stacked">
 					<li><a href="#" class="button primary fit">LET'S TAKE A TOUR</a></li>
 				</ul>
 			</nav>
+
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
 					<section id="banner" class="alt">
@@ -82,9 +75,7 @@
 											</header>
 											<ul>
 												<li><a href="Logistics Network.html">Logistics Network Design | Supply Chain Logistics Final Project | Coursera</a></li>
-												<li><a href="https://app.datacamp.com/workspace/w/267597d9-1f33-4152-85ea-9803c203477f">Investigating Netflix Movies and Guest Stars in The Office | DataCamp</a></li>
-												<li><a href="https://app.datacamp.com/workspace/w/5b770b9e-3415-44c5-8d44-a827da7e8237">Generating Keywords for Google Ads | DataCamp</a></li>
-												<li><a href="Word_cloud.html">Word Cloud | Crash Course on Python | Coursera</a></li>
+												<li><a href="#">Word Cloud | Crash Course on Python | Coursera</a></li>
 											</ul>
 										</div>
 									</div>
