--- a/Experiences.html
+++ b/Experiences.html
@@ -6,14 +6,6 @@
 -->
 <html>
 	<head>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK1QYFHS5Y"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'G-QK1QYFHS5Y');
-		</script>
 		<title>Experiences</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -38,11 +30,11 @@
 					<ul class="links">
 						<li><a href="Academics.html">Academics</a></li>
 						<li><a href="Research & Publications.html">Research & Publications</a></li>
-						<li><a href="Big Data Management.html">Big Data Management</a></li>
 						<li><a href="Projects.html">Projects</a></li>
 						<li><a href="Experiences.html">Experiences</a></li>
 						<li><a href="Awards & Certifications.html">Awards & Certifications</a></li>
 						<li><a href="Extra-Curricular Activities.html">Extra-Curricular Activities</a></li>
+						<li><a href="Travelling.html">Travelling</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="#" class="button primary fit">LET'S TAKE A TOUR</a></li>
@@ -71,7 +63,7 @@
 						<!-- One -->
 							<section id="one">
 								
-									<a href="https://drive.google.com/file/d/1xs8nbkA_KEBMzaF7UB6Tdwc3AlBKdpnL/view?usp=sharing" target="_blank" target="_blank" class="button small fit" style="background-color:rgb(7, 71, 71);"> <b style="font-size: 15px;">Professional CV</b></a>
+									<a href="https://drive.google.com/file/d/1tEmw6_KcNtKI6mKIBYCw3T7SKMZzc8Ok/view?usp=sharing" target="_blank" target="_blank" class="button small fit" style="background-color:rgb(7, 71, 71);"> <b style="font-size: 15px;">Professional CV</b></a>
 									<p> </p>
 									<a class="button fit" style="background-color:rgb(46, 4, 46);"><b style="font-size: 15px;">Work Experiences</b></a>
 								
@@ -98,12 +90,6 @@
 												<tr>
 													<td>Affiliate Student Member</td>
 													<td>BUET Chapter, Institution of Mechanical Engineers (IMechE)</td>
-													<td>2022</td>
-												</tr>
-
-												<tr>
-													<td>Hall Mess Manager</td>
-													<td>Titumir Hall, Buet</td>
 													<td>2022</td>
 												</tr>
 
