--- a/Academics.html
+++ b/Academics.html
@@ -113,7 +113,7 @@
 												</tr>
 												<tr>
 													<td>Post Processing & Data Visualization</td>
-													<td>Tec Plot 360 , Plot Digitizer , Seaborn</td>
+													<td>Tec Plot 360 , Matplotlib, Tableau</td>
 												</tr>
 												<tr>
 													<td>Web Design Tools</td>
@@ -130,8 +130,13 @@
 
 												<tr>
 													<td>Data Manipulation</td>
-													<td>Pandas(Python)</td>
+													<td>Pandas, Numpy</td>
 												</tr>
+
+											         <tr>
+													 <td>Machine Learning</td>
+													 <td>TensorFlow</td>
+												 </tr>
 
 											</tbody>
 										</table>
