--- a/Electric Vehicle Ranking.html
+++ b/Electric Vehicle Ranking.html
@@ -16178,7 +16178,7 @@ $$\text {Electric Range} = \frac {\text {Available energy in batteries (kWh)}} {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Rank-the-companies">Rank the companies<a class="anchor-link" href="#Rank-the-companies">&#182;</a></h3>
+<h3 id="Rank-the-companies">Ranking of the companies<a class="anchor-link" href="#Rank-the-companies">&#182;</a></h3>
 </div>
 </div>
 </div>
