--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="https://formsubmit.co/el/solaho">
+								<form method="post" action="https://formsubmit.co/el/solaho/">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
