--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 											<textarea name="message" id="message" rows="6"></textarea>
 										</div>
 									</div>
+									<input type="hidden" name="_next" value="https://mahbub1807.github.io/Portfolio_1807/" />
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
