--- a/Logistics Network.html
+++ b/Logistics Network.html
@@ -74,7 +74,7 @@
 								
 									<div class="table-wrapper">
 
-										<img src="images/Logistics/Warehouse Design.png" alt="" data-position="center center" width="100%"/>
+										<img src="images/Warehouse Design.png" alt="" data-position="center center" width="100%"/>
 										
 									</div>
 
