--- a/Projects.html
+++ b/Projects.html
@@ -83,7 +83,7 @@
 											</header>
 											<ul>
 												<li><a href="Logistics Network.html">Logistics Network Design | Supply Chain Logistics Final Project | Coursera</a></li>
-												<li><a href="#">Word Cloud | Crash Course on Python | Coursera</a></li>
+												<li><a href="Word_cloud.html">Word Cloud | Crash Course on Python | Coursera</a></li>
 											</ul>
 										</div>
 									</div>
