--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 												</header>
 												<div>
 													<ul>
-														<li>Junior Mechanical Engineer | Technovative Solutions Limited | Jan 2023 - Present</li>
+														<li>Junior Mechanical Engineer | Indetechs Solutions Limited | Jan 2023 - Present</li>
 														<li>Industrial Trainee | British American Tobacco Bangladesh | Apr 2022 </li>	
 														<li>Affiliate Student Member at Institution of Mechanical Engineers (IMechE) | Jun 2022</li>
 														<li>Bachelor of Science | Department of Mechanical Engineering, BUET | Feb 2017 - May 2022</li>
