Update Research & Publications.html

--- a/Research & Publications.html
+++ b/Research & Publications.html
@@ -110,6 +110,14 @@
 										<li>Fuel injection pressures and cavity aspect ratios were taken as variable parameters and their effects on the performance parameters of a hypersonic vehicle were explicitly evaluated.</li>
 									</ul>
 								</div>
+
+								<div>
+									<span class="image fit">
+										<img src="images/Research/MoleFraction Short.png" alt="" />
+										<img src="images/Research/Mach Crop L5 PR4.5 .png" alt="" />
+										<img src="images/Research/DensitycropL5 PR 4.5.png" alt="" />
+									</span>
+								</div>
 	
 
 									<p style="font-size: 40px;"></p>
