Update Research & Publications.html

--- a/Research & Publications.html
+++ b/Research & Publications.html
@@ -111,11 +111,19 @@
 									</ul>
 								</div>
 
-								<div>
+							    	<div class="box">
+									<h3>Shadowgraph</h3>
 									<span class="image fit">
-										<img src="images/Research/MoleFraction Short.png" alt="" />
-										<img src="images/Research/Mach Crop L5 PR4.5 .png" alt="" />
-										<img src="images/Research/DensitycropL5 PR 4.5.png" alt="" />
+										<img src="images/Research/ShadowGraph.png" alt="" />
+									</span>
+								</div>
+
+								<div class="box">
+									<h3>Contour Plots</h3>
+									<span class="image-fit">
+										<img src="images/Research/MoleFraction Short.png" alt=""  width="100%"/>
+										<img src="images/Research/DensitycropL5 PR 4.5.png" alt="" width="100%"/>
+										<img src="images/Research/Mach Crop L5 PR4.5 .png" alt="" width="100%"/>
 									</span>
 								</div>
 	
