--- a/Research & Publications.html
+++ b/Research & Publications.html
@@ -109,7 +109,10 @@
 
 								
 								<div class="box">
-									<h3>Shadowgraph</h3>
+									<h3>Numerical Schlieren Image</h3>
+									<span class="image fit">
+										<img src="images/Research/Shadowgraph.png" alt="" />
+									</span>
 								</div>
 
 								<div class="box">
