--- a/Research & Publications.html
+++ b/Research & Publications.html
@@ -111,7 +111,7 @@
 								<div class="box">
 									<h3>Numerical Schlieren Image</h3>
 									<span class="image fit">
-										<img src="images/Research/Shadowgraph.png" alt="" />
+										<img src="images/Research/Shadowgraph.PNG" alt="" />
 									</span>
 								</div>
 
